[SPARK-56833] Add `-XX:+EnableDynamicAgentLoading` to test JVM options